--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
         <div class="menu">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Project Page-Simple</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="/proyecto1/">Home</a></li>
+            <li><a href="./project.html">Project Page-Simple</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="./contact-us.html">About</a></li>
           </ul>
         </div>
 
