--- a/project.html
+++ b/project.html
@@ -23,11 +23,11 @@
 
           <div class="menu">
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Project Page-Simple</a></li>
-              <li><a href="#">Projects</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">About</a></li>
+              <li><a href="/proyecto1/">Home</a></li>
+              <li><a href="./project.html">Project Page-Simple</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="./contact-us.html">About</a></li>
             </ul>
           </div>
 
@@ -39,111 +39,64 @@
     </header>
 
     <main>
-      <section id="hero">
-        <div class="container">
-          <div class="hero-text">
-            <h1>sunt aut facere repellat provident occaecati excepturi optio reprehenderit</h1>
-            <p>
-                sunt aut facere repellat provident occaecati excepturi optio reprehenderit
-            </p>
-            <div class="hero-container-button">
-              <a href="#" class="contact-btn">Get in touch</a>
-              <a href="#" class="work-btn">See our work</a>
+      <section id="projects">
+        <div class="container-projects">
+          <div class="main-project">
+            <div class="title">
+              <h1>Simplifyy</h1>
+            </div>
+            <div class="title-footer">
+              <h2>UI Design & App Development</h2>
+              <h3>Completed on 2/2/22</h3>
+            </div>
+            <div class="image-project">
+              <img
+                src="resources/images/projects-section/1.jpg"
+                alt="Project Image"
+              />
+            </div>
+
+            <div class="text-project">
+              <p>
+                Simplify is lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Sed feugiat faucibus sem, id vulputate justo ornare non.
+                Nullam et vehicula sem. Pellentesque bibendum massa non nisl
+                posuere cursus. Aliquam ac eros pretium neque consequat
+                facilisis. Ut sit amet justo varius ex ultrices fringilla. Sed
+                vel turpis fringilla ante gravida vestibulum. Etiam a
+                sollicitudin leo. Nunc metus lectus, lacinia ut arcu quis,
+                pretium congue lacus.
+              </p>
+              <p>
+                Aliquam blandit varius metus, in mattis orci convallis sit amet.
+                Fusce et sem ac velit placerat ultrices in id dolor. Sed eget
+                auctor metus. Sed suscipit fringilla lectus, a maximus justo
+                bibendum a. Donec et pellentesque nisl, vitae tempus lorem. Sed
+                efficitur cursus rhoncus. Duis placerat nisi quis mi tincidunt,
+                sit amet tincidunt urna convallis. Nam et sagittis felis.
+                Pellentesque placerat orci sodales nisi convallis ultrices. Nunc
+                posuere neque eu mi imperdiet ullamcorper. Praesent tempor
+                convallis rutrum. Vestibulum dignissim pellentesque eros in
+                placerat. Etiam at nisi quis quam sollicitudin vehicula sit amet
+                vel mi.
+              </p>
             </div>
           </div>
-
-          <div class="hero-pictures">
-            <img
-              src="resources\images\hero-section\hero-image.png"
-              alt="Hero Image"
-            />
-            <img
-              src="resources\images\hero-section\card-1.png"
-              alt="Hero Image"
-            />
-            <img
-              src="resources\images\hero-section\card-2.png"
-              alt="Hero Image"
-            />
           </div>
         </div>
-      </section>
 
-      <section id="partners">
         <div class="container">
-          <div class="partners-logos">
-            <a href="https://www.amazon.es" target="_blank">
-              <img
-                src="resources/images/logos/amazon-logo.svg"
-                alt="Amazon Logo"
-                class="partners-logos-brand"
-              />
-            </a>
-            <a href="https://www.nike.com" target="_blank">
-              <img
-                src="resources/images/logos/Logo_NIKE.svg"
-                alt="Nike Logo"
-                class="partners-logos-brand"
-              />
-            </a>
-            <a href="https://www.adidas.com" target="_blank">
-              <img
-                src="resources/images/logos/Adidas_Logo.svg"
-                alt="Adidas Logo"
-                class="partners-logos-brand"
-              />
-            </a>
-            <a href="https://www.airbnb.com" target="_blank">
-              <img
-                src="resources/images/logos/airbnb-logo.svg"
-                alt="Airbnb Logo"
-                class="partners-logos-brand"
-              />
-            </a>
-            <a href="https://www.google.es" target="_blank">
-              <img
-                src="resources/images/logos/google-logo.svg"
-                alt="Google Logo"
-                class="partners-logos-brand"
-              />
-            </a>
-            <a href="https://www.microsoft.com" target="_blank">
-              <img
-                src="resources/images/logos/microsoft-logo.svg"
-                alt="Microsoft Logo"
-                class="partners-logos-brand"
-              />
-            </a>
-            <a href="https://www.fedex.com" target="_blank">
-              <img
-                src="resources/images/logos/fedex-logo.svg"
-                alt="Fedex Logo"
-                class="partners-logos-brand"
-              />
-            </a>
-          </div>
-        </div>
-      </section>
-
-      <section id="projects">
-        <div class="container">
-          <h2 class="section-title">Recent<br>Projects</h2>
+          <h2 class="section-title">Other Projects</h2>
           <div class="js-projects">
             <div class="project">
               <img
                 src="resources/images/projects-section/1.jpg"
                 alt="Project Imagen"
               />
+
               <div class="text-project">
-                <h3>
-                  sunt aut facere repellat provident occaecati excepturi optio
-                  reprehenderit
-                </h3>
-                <p>
-                  quia et suscipit suscipit recusandae consequuntur expedita et
-                  cum reprehenderit molestiae ut ut quas totam nostrum rerum est
-                  autem sunt rem eveniet architecto
-                </p>
+                <h3>Simplify</h3>
+                <p>UI Design & App Development</p>
                 <a href="project.html?id=1">Learn More</a>
               </div>
             </div>
@@ -154,15 +107,8 @@
                 alt="Project Imagen"
               />
               <div class="text-project">
-                <h3>
-                  sunt aut facere repellat provident occaecati excepturi optio
-                  reprehenderit
-                </h3>
-                <p>
-                  quia et suscipit suscipit recusandae consequuntur expedita et
-                  cum reprehenderit molestiae ut ut quas totam nostrum rerum est
-                  autem sunt rem eveniet architecto
-                </p>
+                <h3>Dashcoin</h3>
+                <p>Web Development</p>
                 <a href="project.html?id=1">Learn More</a>
               </div>
             </div>
@@ -173,15 +119,8 @@
                 alt="Project Imagen"
               />
               <div class="text-project">
-                <h3>
-                  sunt aut facere repellat provident occaecati excepturi optio
-                  reprehenderit
-                </h3>
-                <p>
-                  quia et suscipit suscipit recusandae consequuntur expedita et
-                  cum reprehenderit molestiae ut ut quas totam nostrum rerum est
-                  autem sunt rem eveniet architecto
-                </p>
+                <h3>Vectorify</h3>
+                <p>User Experience Design</p>
                 <a href="project.html?id=1">Learn More</a>
               </div>
             </div>
@@ -189,94 +128,38 @@
         </div>
       </section>
 
-      <section id="clients">
+      <section id="questions">
         <div class="container">
-          <h2>Hear What Our Clients Have to Say</h2>
-          <p>
-            "Circle helped us through every stage of our startup. We really
-            enjoyed working with you."
-          </p>
-          <div class="profile">
-            <img
-              src="resources/images/testimonial-section/profile.png"
-              alt="Profile Image"
-            />
-            <div>
-              <h4>Kristin Watson</h4>
-              <span>Booking.com</span>
+          <div class="questions-container">
+            <h3>Do you have any questions?</h3>
+            <p>Let us help you!</p>
+            <div class="input-container">
+              <input type="text" placeholder="Enter your email" />
+              <a href="#" class="contact-btn">Subscribe</a>
             </div>
           </div>
-        </div>
-      </section>
-
-      <section id="services">
-        <div class="container">
-          <h2 class="section-title">Our<br />Services</h2>
-          <div class="service-container">
-            <img
-              src="resources/images/services-section/icons/1.svg"
-              alt="service1 logo"
-            />
-            <h3>User Interface Design</h3>
-            <p>
-              Circle provides you with a stunning user interface design that is
-              accessible to everyone.
-            </p>
-            <a href="#">Learn More</a>
-          </div>
-          <div class="service-container">
-            <img
-              src="resources/images/services-section/icons/2.svg"
-              alt="service2 logo"
-            />
-            <h3>User Experience Design</h3>
-            <p>
-              Circle always focuses on delivering the best user experience to
-              your customers.
-            </p>
-            <a href="#">Learn More</a>
-          </div>
-          <div class="service-container">
-            <img
-              src="resources/images/services-section/icons/3.svg"
-              alt="service3 logo"
-            />
-            <h3>Application Development</h3>
-            <p>
-              We develop high-quality mobile and web applications using the
-              latest technology stack.s
-            </p>
-            <a href="#">Learn More</a>
-          </div>
-        </div>
-      </section>
-
-      <section id="questions">
-        <div class="questions-container">
-          <h3>Do you have any questions?</h3>
-          <p>Let us help you!</p>
-          <input type="text" placeholder="Enter your email">
-          <a href="#" class="contact-btn">Subscribe</a>
         </div>
       </section>
     </main>
 
     <footer>
-      <div class="footer-address">
-        <div class="footer-address-logo">
-          <img src="./resources/images/logos/circle.svg" alt="Logo Circle" />
+      <div class="container">
+        <div class="footer-address">
+          <div class="footer-address-logo">
+            <img src="./resources/images/logos/circle.svg" alt="Logo Circle" />
+          </div>
+          <div class="footer-address-text">
+            <p>2972 Westheimer Rd. Santa Ana,<br />Illinois 85486</p>
+          </div>
         </div>
-        <div class="footer-address-text">
-          <p>2972 Westheimer Rd. Santa Ana,<br />Illinois 85486</p>
+        <div class="footer-links">
+          <a href="#">Team</a>
+          <a href="#">Services</a>
+          <a href="#">About Us</a>
+          <a href="#">Press</a>
+          <a href="#">Projects</a>
+          <a href="#">Privacy Policy</a>
         </div>
-      </div>
-      <div class="footer-links">
-        <a href="#">Team</a>
-        <a href="#">Services</a>
-        <a href="#">About Us</a>
-        <a href="#">Press</a>
-        <a href="#">Projects</a>
-        <a href="#">Privacy Policy</a>
       </div>
     </footer>
   </body>
