--- a/project.html
+++ b/project.html
@@ -40,8 +40,8 @@
 
     <main>
       <section id="projects">
-        <div class="container-projects">
-          <div class="main-project">
+        <div class="container-main-project">
+          <!-- <div class="main-project">
             <div class="title">
               <h1>Simplifyy</h1>
             </div>
@@ -81,7 +81,7 @@
                 vel mi.
               </p>
             </div>
-          </div>
+          </div> -->
           </div>
         </div>
 
@@ -162,5 +162,6 @@
         </div>
       </div>
     </footer>
+    <script type="module" src="./resources/js/project.js"></script>
   </body>
 </html>
