--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="container">
         <h2 class="section-title">Recent Projects</h2>
         <div class="js-projects">
-          <div class="project">
+          <!-- <div class="project">
 
             <img src="resources/images/projects-section/1.jpg" alt="Project Imagen" />
 
@@ -142,7 +142,7 @@
                 autem sunt rem eveniet architecto
               </p>
               <a href="project.html?id=1">Learn More</a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -256,6 +256,8 @@
     </div>
 
   </footer>
+
+  <script type="module" src="./resources/js/index.js"></script>
 </body>
 
 </html>
