--- a/contact-us.html
+++ b/contact-us.html
@@ -31,7 +31,7 @@
           </div>
 
           <div class="contact">
-            <a href="#" class="contact-btn">Contact Us</a>
+            <a href="./contact-us.html" class="contact-btn">Contact Us</a>
           </div>
         </nav>
       </div>
