--- a/about-us.html
+++ b/about-us.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="contact">
-          <a href="#" class="contact-btn">Contact Us</a>
+          <a href="./contact-us.html" class="contact-btn">Contact Us</a>
         </div>
       </nav>
     </div>
