--- a/contact-us.html
+++ b/contact-us.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Circle Agency</title>
     <link rel="stylesheet" href="resources/styles/style.css" />
+    <style>
+        /* Reglas de estilo específicas para este HTML */
+        header {
+          margin: 0 100px;
+        }
+        footer {
+          margin-left: 100px;
+          margin-right: 100px;
+        }
+      </style>
   </head>
 
   <body>
