--- a/about-us.html
+++ b/about-us.html
@@ -56,7 +56,7 @@
 
       <section id="favorite-songs">
         <div class="container">
-          <h2>Our favorite songs!</h2>
+          <h2 class="title-about">Our favorite songs!</h2>
           <div class="videos-container">
           </div>
         </div>
@@ -64,8 +64,8 @@
 
       <section id="podcast">
         <div class="container">
-          <h2>The best podcast we can show you</h2>
-          <div class="podcast">
+          <h2 class="title-about">The best podcast we can show you</h2>
+          <div class="podcast-frame">
           </div>
         </div>
       </section>
